--- a/app/region/region-debris.css
+++ b/app/region/region-debris.css
@@ -1,6 +1,10 @@
 .region.region-debris {
-	/*filter: blur(0.65px);
-	opacity: 0.75;*/
+	transition: opacity 0.25s ease-in, filter 0.25s ease-in;
+}
+
+.region.region-debris[data-active=false] {
+	filter: blur(0.65px);
+	opacity: 0.0;
 }
 
 .region.region-debris .sprite {
@@ -16,7 +20,7 @@
 	background: url(/Sonic/leaves-debris.png), url(/Sonic/leaves-debris.png);
 	background-position-x: calc(-0px + var(--vpX));
 	height: calc(100% - 64px);
-	animation: debris-shift 0.85s linear infinite, debris-wave 2.75s linear infinite;
+	animation: debris-shift 0.65s linear infinite, debris-wave 2.75s linear infinite;
 	top:  0px;
 }
 
