--- a/app/region/shade-region.css
+++ b/app/region/shade-region.css
@@ -214,7 +214,7 @@
 		lava-ripple linear infinite 3.5s
 		, lava-flow linear infinite 11.5s;
 	background-image: url(Sonic/lava-1.png);
-	background-color: rgba(255,192,0,1);
+	/* background-color: rgba(255,192,0,1); */
 	opacity: 0.75;
 }
 
