Manic Harbor 2 Knuckles path

--- a/app/actor/anti-ring.css
+++ b/app/actor/anti-ring.css
@@ -1,4 +1,5 @@
 .actor-item.actor-anti-ring .sprite {
+	backface-visibility: hidden;
 	background-image: url(/Sonic/antiring.png) !important;
 	background-position: 0 0;
 	--sprite-offset-x: 0px;
