--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -343,6 +343,17 @@
 	top: 1px;
 }
 
+[data-agent=firefox] .screen-card-pause-menu [data-wraps=number]::after,
+[data-agent=firefox] .screen-card-main-menu [data-wraps=number]::after,
+[data-agent=firefox] .screen-card-pause-menu [data-wraps=select]::after,
+[data-agent=firefox] .screen-card-main-menu [data-wraps=select]::after,
+[data-agent=firefox] .screen-card-pause-menu [data-wraps=number]::before,
+[data-agent=firefox] .screen-card-main-menu [data-wraps=number]::before,
+[data-agent=firefox] .screen-card-pause-menu [data-wraps=select]::before,
+[data-agent=firefox] .screen-card-main-menu [data-wraps=select]::before {
+	top: -1px;
+}
+
 .screen-card-pause-menu [data-wraps=number]::after,
 .screen-card-main-menu [data-wraps=number]::after,
 .screen-card-pause-menu [data-wraps=select]::after,
@@ -394,7 +405,7 @@
 .screen-card-pause-menu input[type=number] {
 	text-align: center;
 	display: inline;
-	min-width: 2em;
+	width: 2em;
 	font-size: 1em;
 }
 
@@ -406,6 +417,7 @@
 	margin: 0;
 	padding: 0;
 	padding-left: 16px;
+	scrollbar-width: none;
 	/*padding-bottom: 1em;*/
 }
 
@@ -543,6 +555,13 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	/*-webkit-appearance: inner-spin-button !important;*/
 	-webkit-appearance: none;
+	margin: 0;
+}
+
+[data-agent=firefox] input[type=number],
+[data-agent=firefox] input[type=number] {
+	-moz-appearance: textfield;
+	appearance: textfield;
 	margin: 0;
 }
 
